# cpp-bgui

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
backend/: CMakeLists.txt  bgui_backend_glfw.hpp  bgui_backend_opengl3.hpp  bgui_backend_vulkan.hpp
backend/freetype/: CMakeLists.txt  bgui_backend_freetype.cpp
backend/glfw/: CMakeLists.txt  bgui_backend_glfw.cpp
backend/null/: CMakeLists.txt
backend/opengl3/: CMakeLists.txt  bgui_backend_opengl3.cpp
backend/vulkan/: CMakeLists.txt  bgui_backend_vulkan.cpp
bgui/: CMakeLists.txt
bgui/include/elem/: box.hpp  element.hpp  layout.hpp  linear_layout.hpp  text.hpp  text_input.hpp
bgui/include/os/: font.hpp
bgui/include/utils/: theme.hpp
bgui/source/: bgui.cpp
bgui/source/elem/: box.cpp  button.cpp  element.cpp  layout.cpp  linear_layout.cpp  text.cpp  text_input.cpp
bgui/source/gl/: shader.cpp
bgui/source/os/: os.cpp
core/: CMakeLists.txt
core/include/: bgui.hpp
core/include/elem/: button.hpp  checkbox.hpp  element.hpp  input_area.hpp  text.hpp  text_input.hpp  window.hpp
core/include/lay/: layout.hpp  linear.hpp  modular.hpp  relative.hpp
core/include/os/: font.hpp  os.hpp
core/include/utils/: draw.hpp  propertie.hpp  style.hpp  texture.hpp  theme.hpp
core/source/: bgui.cpp
exemples/: CMakeLists.txt
exemples/glfw_gl3/: main.cpp
exemples/glfw_opengl3/: CMakeLists.txt  main.cpp
exemples/glfw_vulkan/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_elem.cpp
tlb/source/: tlb.cpp
(+28 files in other folders)
